--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "next": "14.1.0",
     "react": "^18",
@@ -17,6 +18,8 @@
   "devDependencies": {
     "@heroicons-plus/react": "1.0.5",
     "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
